# starvellapi

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  quickstart.md  requirements.txt
docs/api/: account.md  enums.md  events.md  exceptions.md  online.md  runner.md  types.md
docs/guide/: account.md  events.md  online.md
starvellapi/: __init__.py  account.py  enums.py  exceptions.py  parser.py  types.py
starvellapi/updater/: events.py  online.py  runner.py
