[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starvellapi"
version = "1.0.0"
description = "Async-клиент Starvell API на httpx и websockets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "yusxe" },
]
keywords = ["starvell", "api", "async", "httpx", "websockets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "certifi",
    "websockets>=12",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]

[project.urls]
Homepage = "https://github.com/mooonfrog/starvellapi"
Documentation = "https://starvellapi.readthedocs.io"
Repository = "https://github.com/mooonfrog/starvellapi"
Issues = "https://github.com/mooonfrog/starvellapi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["starvellapi*"]
exclude = ["docs*", "tests*"]
